Fix typo in robots.txt

--- a/ringapp/templates/ringapp/expanded_details/bergmans-right-primitive-ring.html
+++ b/ringapp/templates/ringapp/expanded_details/bergmans-right-primitive-ring.html
@@ -14,7 +14,7 @@
     <div class="panel panel-default">
       <div class="panel-body">
       <p> Let $\alpha:\mathbb Q(x)\to \mathbb Q(x)$ be the field endomorphism determined by $x\mapsto x^2$, and
-          let $A=\mathbb Q[Y;\alpha]$ be the twisted polynomial ring (such that $Yq:=\alpha(q)Y$ for $q\in \mathbb Q$.</p>
+          let $A=\mathbb Q(x)[Y;\alpha]$ be the twisted polynomial ring (such that $Yq:=\alpha(q)Y$ for $q\in \mathbb Q(x)$.</p>
       <p> For every odd integer $n$, let $\nu_n$ be the valuation on $\mathbb Q(x)$ induced by the $n$th cyclotomic
           polynomial. Each one can be extended to a valuation on $A$ by defining $\nu_n(\sum d_iY^i)=\min_i \nu_n(d_i)$.</p>
       <p>Let $V$ be an infinite set of valuations of this type with the property that at any
