Add mathhub link to front page.

--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -81,9 +81,10 @@
                     Mathematical exceptions to the rules or intuition.
                 </li>
 
-                <li class="list-group-item"><img src="https://www.google.com/s2/favicons?domain=grdb.co.uk"> <a
-                        href="http://www.grdb.co.uk/">Graded Ring Database</a>:
-                    A database of graded rings in algebraic geometry
+                <li class="list-group-item"><img src="https://www.google.com/s2/favicons?domain=mathdb.mathhub.info"> <a
+                        href="https://mathdb.mathhub.info/">Catalogue of Mathematical Datasets
+</a>:
+                    A database of mathematical databases like DaRT and π-Base
                 </li>
                 <li class="list-group-item"><img src="https://www.google.com/s2/favicons?domain=facebook.com"> <a
                         href="https://www.facebook.com/ring.theory.and.its.applications">The Center of Ring Theory and
