--- a/ringapp/templates/registration/registration_complete.html
+++ b/ringapp/templates/registration/registration_complete.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% load i18n %}
 
 {% block title %}{% trans "Activation email sent" %}{% endblock %}
