Updated instructions for contributing, including new instructions for contributing to dart_data

--- a/ringapp/templates/base.html
+++ b/ringapp/templates/base.html
@@ -126,7 +126,7 @@
     </div>
     <hr />
     <div id="footer"><footer class="container">
-      <p>&copy;  Ryan C. Schwiebert 2014-{% now "Y" %}. <a href="{% url 'faq' %}">(Help)</a>  <span style="float:right;"><i class="glyphicon glyphicon-hand-right"></i> <a href="http://glyphicons.com/">Glyphicons</a></span></p>
+      <p>&copy;  Database of Ring Theory 2014-{% now "Y" %}. <a href="{% url 'faq' %}">(Help)</a>  <span style="float:right;"><i class="glyphicon glyphicon-hand-right"></i> <a href="http://glyphicons.com/">Glyphicons</a></span></p>
         </footer>
     </div>
     <!-- Bootstrap core JavaScript
