--- a/ringapp/templates/ringapp/contribute.html
+++ b/ringapp/templates/ringapp/contribute.html
@@ -18,12 +18,23 @@
 
 <div class="container"> 
     <h1>Contribute</h1>
+    <p>To contribute, you will either need to register here on this site, or else have a GitHub account.</p>
 
-    <p>For site-specific suggestions, please use the <a href="https://github.com/rschwiebert/RingApp/issues">GitHub issue tracker</a>.</p>
+    <p>For bug reports, feature requests, or problems with <b>the website itself</b>, use the
+        <a href="https://github.com/rschwiebert/RingApp/issues">RingApp GitHub issue tracker</a>.</p>
+    <p>For suggestions or corrections to <b>the database content</b>, use the
+        <a href="https://github.com/rschwiebert/dart_data/issues">dart_data GitHub issue tracker</a>.</p>
+    <p>If for some reason GitHub is not for you, you can always use the form below to make any suggestion.</p>
+
+    <p>After getting feedback at your issue, you may wish to start developing your pull request.
+        <a href="https://gist.github.com/MarcDiethelm/7303312">Here is a brief guide for how to do
+            that for a GitHub project.</a>  Doing this just makes it quicker for your change to get reviewed
+    and adopted, since an admin will not have to do it for you.</p>
+
 
    <div class="row">
      <div class="col-md-12 content">
-	The database is always growing, and is always in need of more content, especially ring examples and citations for specific claims.<br>
+	<h2>Reminders</h2><br>
 	<br>
 	To help maintain the quality of content and integrity of the database, please keep these points in mind:
 	<ul>
