Update dart_data version and text in a template.

--- a/moduleapp/templates/moduleapp/module_list.html
+++ b/moduleapp/templates/moduleapp/module_list.html
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="panel panel-default">
     <div class="panel-heading"><h1>Modules</h1></div>
-      <p><i>(All modules are right modules.)</i></p>
+      <p><i>(All modules are unital right modules.)</i></p>
       <table class="table">
       <thead>
         <tr>
