Revise contribute.html to point to the new CONTRIBUTING instructions in the repos.

--- a/ringapp/templates/ringapp/contribute.html
+++ b/ringapp/templates/ringapp/contribute.html
@@ -20,16 +20,15 @@
     <div class="row">
         <div class="col-md-6 content">
             <h1>How to contribute</h1>
-            <p>You will either need to register here on this site, or else have a GitHub account.</p>
+            <p>You can use a GitHub account or else will need to register here on this site.</p>
+            <p>If you'd like to report a bug, request a feature, or contribute to <b>the website's code</b>,
+                use the detailed instructions at this
+                <a href="https://github.com/rschwiebert/RingApp/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a>.</p>
+            <p>For additions or corrections to <b>the database content</b>, use the detailed instructions at this other
+                 <a href="https://github.com/rschwiebert/dart_data/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a>.</p>
 
-            <p>For bug reports, feature requests, or problems with <b>the website itself</b>, use the
-                <a href="https://github.com/rschwiebert/RingApp/issues">RingApp GitHub issue tracker</a>.</p>
-            <p>For suggestions or corrections to <b>the database content</b>, use the
-                <a href="https://github.com/rschwiebert/dart_data/issues">dart_data GitHub issue tracker</a>.</p>
-            <p>If you are knowledgable enough and would like to formulate your own pull request with changes,
-                <a href="https://gist.github.com/MarcDiethelm/7303312">here is a brief guide for how to do
-                    that for a GitHub project.</a></p>
-            <p>If you don't want to use GitHub, you can always use the form below to make any suggestion.</p>
+            <p>Working via GitHub is preferred, but if you <i>really</i> can't, you can always use the form below
+                to make any suggestion.</p>
 
             <h2>Make a quick suggestion</h2>
 
