Fix module detail page to show metaproperty information. Add module property svg

--- a/ringapp/templates/ringapp/ringmaps.html
+++ b/ringapp/templates/ringapp/ringmaps.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container">
-    <h1>Graphs of ring properties</h1>
+    <h1>Graphs of properties</h1>
     <p>Graphs like these were the original inspiration for this site. I produced some hand-crafted
        graphs with OpenOffice in my grad school days, and I hope to post versions of them later.
        The database now contains more properties than those graphs did anyway, so I need to regenerate
@@ -18,6 +18,7 @@
                <a class="list-group-item" href="{% url 'ring-map' 'commrings' %}">Ring properties for commutative rings</a>
                <a class="list-group-item" href="{% url 'ring-map' 'domain' %}">Ring properties for integral domains</a>
                <a class="list-group-item" href="{% url 'ring-map' 'local' %}">Ring properties for commutative local rings</a>
+               <a class="list-group-item" href="{% url 'ring-map' 'allmoduleprops' %}">All module properties</a>
             </div>
         </div>
 
